--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-select": "^5.9.0",
     "scss": "^0.2.4",
     "styled-components": "^6.1.13"
   },
