--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rgs-ui/design-tokens": "0.36.0",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-select": "^5.9.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
